attached_assets/Pasted-Pyromod-is-working-If-you-like-pyromod-please-star-it-at-https-github-com-usernein-pyromod-Trac-1751276389791_1751276389791.txt
Pyromod is working! If you like pyromod, please star it at https://github.com/usernein/pyromod
Traceback (most recent call last):
  File "/home/runner/workspace/bot.py", line 52, in <module>
    bot.run()
  File "/home/runner/workspace/.pythonlibs/lib/python3.12/site-packages/pyrogram/methods/utilities/run.py", line 80, in run
    run(self.start())
  File "/nix/store/nb21sc3npfc8gvazwnrjxpvb5d48jysx-python3-3.12.7/lib/python3.12/asyncio/base_events.py", line 687, in run_until_complete
    return future.result()
           ^^^^^^^^^^^^^^^
  File "/home/runner/workspace/bot.py", line 24, in start
    await super().start()
  File "/home/runner/workspace/.pythonlibs/lib/python3.12/site-packages/pyrogram/methods/utilities/start.py", line 74, in start
    await self.initialize()
  File "/home/runner/workspace/.pythonlibs/lib/python3.12/site-packages/pyrogram/methods/auth/initialize.py", line 45, in initialize
    self.load_plugins()
  File "/home/runner/workspace/.pythonlibs/lib/python3.12/site-packages/pyrogram/client.py", line 639, in load_plugins
    module = import_module(module_path)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/nix/store/nb21sc3npfc8gvazwnrjxpvb5d48jysx-python3-3.12.7/lib/python3.12/importlib/__init__.py", line 90, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 935, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 991, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1129, in get_code
  File "<frozen importlib._bootstrap_external>", line 1059, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/home/runner/workspace/plugins/admin_panel.py", line 38
    await message.reply(f"❌ Restart failed: {str(e)}")ble, *sys.argv)
                                                                    ^
SyntaxError: unmatched ')'